--- a/sc17/Controller.ipynb
+++ b/sc17/Controller.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -102,10 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from coord import get_config as gc\n",
@@ -114,22 +112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[wash-192, cern-194, amst-190, aofa-191, denv-201, atla-200]"
+       "wash-tb-of-1"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_config.dtns"
+    "new_config.dtns[0].switch\n"
    ]
   },
   {
@@ -296,19 +294,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'epoch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-87c3b581f6c7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcoord\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCoordinator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mcoord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCoordinator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapp_ip\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"192.168.120.119\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"caliber-slice\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mepoch_time\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mconfig_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"calibers-denv.config\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscenario_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"scenario.data\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmax_rate_mbps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m500\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mcoord\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mcoord\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/lomax/Documents/workspace/calibers/sc17/coord.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, config_file, epoch_time, max_rate_mbps, scenario_file, algo, app_ip)\u001b[0m\n\u001b[1;32m    178\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax_rate_mbps\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m1000\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    179\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp_ip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapp_ip\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 180\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscheduler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mScheduler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mepoch_time\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0malgo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malgo\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmax_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_rate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    181\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCoordApp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"calibers-api\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mip\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp_ip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoord\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    182\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'epoch'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coordinator is starting.\n",
+      "before pace: the total bandwidth now 500000000\n",
+      "after pace: the total bandwidth now 500000000\n",
+      "before pace: the total bandwidth now 500000000\n",
+      "after pace: the total bandwidth now 500000000\n",
+      "before pace: the total bandwidth now 500000000\n",
+      "after pace: the total bandwidth now 500000000\n",
+      "before pace: the total bandwidth now 500000000\n",
+      "after pace: the total bandwidth now 500000000\n",
+      "before pace: the total bandwidth now 500000000\n",
+      "after pace: the total bandwidth now 500000000\n",
+      "End of scheduler: the total bandwidth now 500000000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-5:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/anaconda/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/anaconda/lib/python2.7/threading.py\", line 754, in run\n",
+      "    self.__target(*self.__args, **self.__kwargs)\n",
+      "  File \"coord.py\", line 396, in run\n",
+      "    self.app.run(host=self.ip, threaded=True)\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/flask/app.py\", line 841, in run\n",
+      "    run_simple(host, port, self, **options)\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/werkzeug/serving.py\", line 708, in run_simple\n",
+      "    inner()\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/werkzeug/serving.py\", line 670, in inner\n",
+      "    fd=fd)\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/werkzeug/serving.py\", line 558, in make_server\n",
+      "    passthrough_errors, ssl_context, fd=fd)\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/werkzeug/serving.py\", line 476, in __init__\n",
+      "    HTTPServer.__init__(self, (host, int(port)), handler)\n",
+      "  File \"/anaconda/lib/python2.7/SocketServer.py\", line 417, in __init__\n",
+      "    self.server_bind()\n",
+      "  File \"/anaconda/lib/python2.7/BaseHTTPServer.py\", line 108, in server_bind\n",
+      "    SocketServer.TCPServer.server_bind(self)\n",
+      "  File \"/anaconda/lib/python2.7/SocketServer.py\", line 431, in server_bind\n",
+      "    self.socket.bind(self.server_address)\n",
+      "  File \"/anaconda/lib/python2.7/socket.py\", line 228, in meth\n",
+      "    return getattr(self._sock,name)(*args)\n",
+      "error: [Errno 49] Can't assign requested address\n",
+      "\n"
      ]
     }
    ],
@@ -503,78 +541,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "import pickle\n",
-    "cc = pickle.loads(c.json())"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[wash-192, cern-194, amst-190, aofa-191, denv-201, atla-200]"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cc.dtns"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://localhost:5000/ (Press CTRL+C to quit)\n",
-      "[2017-11-09 17:55:34,287] ERROR in app: Exception on /start/12 [PUT]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/anaconda/lib/python2.7/site-packages/flask/app.py\", line 1612, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/anaconda/lib/python2.7/site-packages/flask/app.py\", line 1598, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"/anaconda/lib/python2.7/site-packages/flask_restful/__init__.py\", line 480, in wrapper\n",
-      "    resp = resource(*args, **kwargs)\n",
-      "  File \"/anaconda/lib/python2.7/site-packages/flask/views.py\", line 84, in view\n",
-      "    return self.dispatch_request(*args, **kwargs)\n",
-      "  File \"/anaconda/lib/python2.7/site-packages/flask_restful/__init__.py\", line 595, in dispatch_request\n",
-      "    resp = meth(*args, **kwargs)\n",
-      "  File \"<ipython-input-12-137526d33890>\", line 41, in put\n",
-      "    subprocess.Popen(('globus-url-copy -p 1 file:///storage/'+size+'.img ftp://'+dest).split())\n",
-      "  File \"/anaconda/lib/python2.7/subprocess.py\", line 390, in __init__\n",
-      "    errread, errwrite)\n",
-      "  File \"/anaconda/lib/python2.7/subprocess.py\", line 1024, in _execute_child\n",
-      "    raise child_exception\n",
-      "OSError: [Errno 2] No such file or directory\n",
-      "127.0.0.1 - - [09/Nov/2017 17:55:34] \"PUT /start/12 HTTP/1.1\" 500 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GOT FILE\n"
+      " * Running on http://localhost:5000/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "import time\n",
     "import datetime\n",
     "import subprocess\n",
@@ -590,155 +584,58 @@
     "import fcntl\n",
     "import struct\n",
     "\n",
-    "def get_ip_address(ifname):\n",
-    "    s = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)\n",
-    "    return socket.inet_ntoa(fcntl.ioctl(\n",
-    "        s.fileno(),\n",
-    "        0x8915,  # SIOCGIFADDR\n",
-    "        struct.pack('256s', ifname[:15])\n",
-    "    )[20:24])\n",
-    "\n",
-    "@app.route('/setrate/<rate>')\n",
-    "def setRate(rate):\n",
-    "    try:\n",
-    "        subprocess.check_call(('tc qdisc change dev eth1 root fq maxrate '+rate).split())\n",
-    "    except subprocess.CalledProcessError as e:\n",
-    "        print e\n",
-    "    outRate = subprocess.check_output('tc -i qdisc show dev eth1'.split())\n",
-    "    outRate = re.findall('maxrate \\d+',outRate)[0]\n",
-    "    outRate = re.findall('\\d+',outRate)[0]\n",
-    "    return outRate\n",
-    "    \n",
     "class FileTransfer(Resource):\n",
     "    def put(self, size):\n",
-    "        print \"GOT FILE\"\n",
-    "        FileTransfer.r = request.form\n",
+    "        print \"got\",size\n",
+    "        print request.json\n",
     "        dest = request.json['dest']\n",
-    "        subprocess.Popen(('globus-url-copy -p 1 file:///storage/'+size+'.img ftp://'+dest).split())\n",
+    "        print \"got request: \" + dest\n",
+    "        subprocess.Popen(('globus-url-copy vb -fast -p 4 file:///storage/'+size+'.img ftp://'+dest).split())\n",
     "        time.sleep(.4) # Wait for the connection to establish\n",
     "        output = subprocess.check_output('ss -int'.split())\n",
     "        return output\n",
     "\n",
     "api.add_resource(FileTransfer, '/start/<string:size>')\n",
-    "app.run(host='localhost')"
+    "app.run(host='localhost')\n",
+    "                                         "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['__class__',\n",
-       " '__cmp__',\n",
-       " '__contains__',\n",
-       " '__copy__',\n",
-       " '__deepcopy__',\n",
-       " '__delattr__',\n",
-       " '__delitem__',\n",
-       " '__dict__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__getstate__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__len__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__setitem__',\n",
-       " '__setstate__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " '_hash_cache',\n",
-       " '_iter_hashitems',\n",
-       " 'add',\n",
-       " 'clear',\n",
-       " 'copy',\n",
-       " 'deepcopy',\n",
-       " 'fromkeys',\n",
-       " 'get',\n",
-       " 'getlist',\n",
-       " 'has_key',\n",
-       " 'items',\n",
-       " 'iteritems',\n",
-       " 'iterkeys',\n",
-       " 'iterlists',\n",
-       " 'iterlistvalues',\n",
-       " 'itervalues',\n",
-       " 'keys',\n",
-       " 'lists',\n",
-       " 'listvalues',\n",
-       " 'pop',\n",
-       " 'popitem',\n",
-       " 'popitemlist',\n",
-       " 'poplist',\n",
-       " 'setdefault',\n",
-       " 'setlist',\n",
-       " 'setlistdefault',\n",
-       " 'to_dict',\n",
-       " 'update',\n",
-       " 'values',\n",
-       " 'viewitems',\n",
-       " 'viewkeys',\n",
-       " 'viewvalues']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\r",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0curl: (7) Failed to connect to localhost port 5000: Connection refused\n"
+     ]
     }
    ],
    "source": [
-    "dir(FileTransfer.r)"
+    "%%bash\n",
+    "curl -H \"Content-Type: application/json\" -d \"{'dest':'192.168.112.2:9002/data/test'}\" http://localhost:5000/start/1024000000 -X PUT "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "z = FileTransfer.r.to_dict()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
