--- a/sc17/Setup.ipynb
+++ b/sc17/Setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +123,7 @@
     "atla_dtn = DTN(\"atla-200\",\"192.168.120.200\",port=\"eth1\")\n",
     "dtns = [wash_dtn,cern_dtn,amst_dtn,aofa_dtn,denv_dtn,atla_dtn]\n",
     "\n",
-    "scinet_dtn = DTN(\"scinet-dtn\",\"192.168.100.2\",port=\"eth1\")\n",
+    "scinet_dtn = DTN(\"scinet-dtn\",\"192.168.112.2\",port=\"eth1\")\n",
     "\n",
     "# Simulated sites\n",
     "wash = Site(name=\"wash\", switch=wash_sw, dtn=wash_dtn)\n",
@@ -280,7 +280,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -361,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
