--- a/sc17/Receiver.ipynb
+++ b/sc17/Receiver.ipynb
@@ -29,7 +29,7 @@
     "rest_puller_port=\"5000\"\n",
     "rest_puller_api=\"api/configs/\"\n",
     "rest_puller_update_period_s=1\n",
-    "storage = \"/data/\"\n",
+    "storage = \"/data/112/\"\n",
     "\n",
     "def get_config():\n",
     "    get_url = \"http://192.168.120.119:5000/api/config/\"\n",
