--- a/sc17/Setup.ipynb
+++ b/sc17/Setup.ipynb
@@ -98,7 +98,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%autoreload 2\n",
@@ -196,7 +198,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from coord import Switch, DTN, Site, Config, get_config\n",
@@ -211,12 +215,12 @@
     "switches=[wash_sw,cern_sw,amst_sw,aofa_sw,denv_sw,atla_sw]\n",
     "\n",
     "# Data Transfer Node\n",
-    "wash_dtn = DTN(\"wash-192\",\"192.168.120.115\",port=\"eth1\")\n",
-    "cern_dtn = DTN(\"cern-194\",\"192.168.120.112\",port=\"eth1\")\n",
-    "amst_dtn = DTN(\"amst-190\",\"192.168.120.111\",port=\"eth1\")\n",
-    "aofa_dtn = DTN(\"aofa-191\",\"192.168.120.114\",port=\"eth1\")\n",
-    "denv_dtn = DTN(\"denv-201\",\"192.168.120.116\",port=\"eth1\")\n",
-    "atla_dtn = DTN(\"atla-200\",\"192.168.120.113\",port=\"eth1\")\n",
+    "wash_dtn = DTN(\"wash-115\",\"192.168.120.115\",port=\"eth1\")\n",
+    "cern_dtn = DTN(\"cern-112\",\"192.168.120.112\",port=\"eth1\")\n",
+    "amst_dtn = DTN(\"amst-111\",\"192.168.120.111\",port=\"eth1\")\n",
+    "aofa_dtn = DTN(\"aofa-114\",\"192.168.120.114\",port=\"eth1\")\n",
+    "denv_dtn = DTN(\"denv-116\",\"192.168.120.116\",port=\"eth1\")\n",
+    "atla_dtn = DTN(\"atla-113\",\"192.168.120.113\",port=\"eth1\")\n",
     "dtns = [wash_dtn,cern_dtn,amst_dtn,aofa_dtn,denv_dtn,atla_dtn]\n",
     "\n",
     "scinet_dtn = DTN(\"scinet-dtn\",\"192.168.200.2\",port=\"eth1\")\n",
@@ -265,7 +269,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "config =Config(switches=[aofa_sw],dtns=[aofa_dtn],sites=[aofa])\n",
@@ -311,7 +317,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "reqs_per_dtn = zip(*reqs)\n"
